Complete Vietnam History Map with Mini Games - Ready for production

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,14 @@ NEXT_PUBLIC_FPT_API_KEY=yumz6d2GbPxDxE5l4ydKK1YpFVfeFFEf
 # Thành FPT_AI_API_KEY
 FPT_AI_API_KEY=yumz6d2GbPxDxE5l4ydKK1YpFVfeFFEf
 GEMINI_API_KEY=AIzaSyDIneuxMx8dzlyJ--t4W_qirOr3kZA4cMg
-# Supabase (Optional - cho production)
-# NEXT_PUBLIC_SUPABASE_URL=your_supabase_url
-# NEXT_PUBLIC_SUPABASE_ANON_KEY=your_supabase_anon_key
 
+# Firebase Realtime Database (cho Mini Games)
+# Lấy từ Firebase Console -> Project Settings -> General -> Your apps
+NEXT_PUBLIC_FIREBASE_API_KEY=AIzaSyAKbO7kWxO6_Wd5IR9vBOeEQsXEKXBSpks
+NEXT_PUBLIC_FIREBASE_AUTH_DOMAIN=hcmmmmmm-1d626.firebaseapp.com
+NEXT_PUBLIC_FIREBASE_DATABASE_URL=https://hcmmmmmm-1d626-default-rtdb.asia-southeast1.firebasedatabase.app
+NEXT_PUBLIC_FIREBASE_PROJECT_ID=hcmmmmmm-1d626
+NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=hcmmmmmm-1d626.firebasestorage.app
+NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=215321433779
+NEXT_PUBLIC_FIREBASE_APP_ID=1:215321433779:web:5407188378eb645fc742c6
+NEXT_PUBLIC_FIREBASE_MEASUREMENT_ID=G-WM4Q8JND4H
